--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu
                     ambiente.</p>
                 <form action="login" method="post">
+                    Email:
+                    <input type="email" name="email" id="email"> <br> <br>
+                    Senha: <input type="password" name="senha" id="isenha" min="5px" max="8px" required> <br> <br>
+                    <input type="submit" value="Enviar">
 
                 </form>
             </div>
