--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 
 <body>
     <main>
-        
+
         <section id="login">
             <div id="imagem">
 
@@ -20,12 +21,29 @@
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu
                     ambiente.</p>
-                <form action="login" method="post">
-                    Email:
-                    <input type="email" name="email" id="email"> <br> <br>
-                    Senha: <input type="password" name="senha" id="isenha" min="5px" max="8px" required> <br> <br>
-                    <input type="submit" value="Enviar">
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            person
+                        </span>
+                        <input type="email" name="login" id="ilogin" placeholder="seu E-mail" required
+                            autocomplete="email" maxlength="30">
+                        <label for="ilogin">Login</label>
 
+
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            lock_person
+                        </span>
+                        <input type="password" name="Senha" id="isenha" placeholder="sua senha" required
+                            autocomplete="current-password" minlength="8">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">Esquecia a senha </a><span class="material-symbols-outlined">
+                        account_box
+                    </span>
                 </form>
             </div>
         </section>
