--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esquecia a senha </a><span class="material-symbols-outlined">
+                    <a href="esqueci.html" class="botao">Esquecia a senha <span class="material-symbols-outlined">
                         account_box
-                    </span>
+                    </span> </a>
                 </form>
             </div>
         </section>
