--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             lock_person
                         </span>
                         <input type="password" name="Senha" id="isenha" placeholder="sua senha" required
-                            autocomplete="current-password" minlength="8">
+                            minlength="8">
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
