--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="main.js">
 </head>
 
 <body>
     <main>
-        
+
         <section id="login">
             <div id="imagem">
 
@@ -28,6 +30,8 @@
                         </span>
                         <input type="email" name="login" id="ilogin" placeholder="seu E-mail" required
                             autocomplete="email" maxlength="30">
+
+
                         <label for="ilogin">Login</label>
 
 
@@ -36,15 +40,17 @@
                         <span class="material-symbols-outlined">
                             lock_person
                         </span>
-                        <input type="password" name="Senha" id="isenha" placeholder="sua senha" required
-                            minlength="8">
+                        <input type="password" name="Senha" id="isenha" placeholder="sua senha" required minlength="8">
+                        <i class="bi bi-eye" id="btn-senha" onclick="mostrarSenha()"></i>
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
                     <a href="esqueci.html" class="botao">Esquecia a senha <span class="material-symbols-outlined">
-                        account_box
-                    </span> </a>
+                            account_box
+                        </span> </a>
                 </form>
+
+                <script src="main.js"></script>
             </div>
         </section>
     </main>
